# Proyecto-IA-Avadon

./: Limp de datos.ipynb  Modelo de clasificacion de sangre.ipynb  README.md  donacion.csv  recepcion.csv
BloodBuddyAI/: blood_types.py  chatbot.py  feedback_log.json  intents.json  main.py  neural_chatbot.py  pyproject.toml  styles.css
BloodBuddyAI/.streamlit/: config.toml
