[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "nltk>=3.9.1",
    "numpy>=1.23.5",
    "openai>=1.65.1",
    "pandas>=2.1.0",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.2",
    "tensorflow>=2.15.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]
